pkgs/core/test/fixtures/config-parser/invalid/invalid-source-prefix-github/.boxfilesrc
{
  "plugins": {
    "copy": "github:boxfiles/provider-copy"
  }
}
